--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<!-- sortable table -->
 	<!-- <script src="assets/javascript/sorttable.js"></script> -->
+
 	<!-- Original CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- moment.js -->
@@ -38,7 +39,6 @@
 
 <div class="row">
 	<div class="col col-md-12 text-center">
-
 		<h1>Community Code!</h1>
 		<h3>Search for a Function/Method</h3>
 		<form class="form-inline">
@@ -50,14 +50,12 @@
 
 <div class="row text-center">
 	<div class="col-md-12" id="buttonArea">
-
 		<h3>Add a function/method!</h3>
 		<input placeholder="Function Name" id="nameBox">
 		<input placeholder="Language" id="languageBox">
 		<input placeholder="Sample Syntax" id="syntaxBox">
 		<input placeholder="Description" id="descriptionBox">
 		<button id="functionButton">Add Function/Method!</button>
-
 	</div>
 </div>
 
@@ -109,6 +107,7 @@
 
 </div>
 
+<!-- Link to the JavaScript -->
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
