Made YouTube API call much better

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<!-- function holder -->
 	<div class="col col-md-12 right" id="functiontable">
 
-		<table class="sortable table table-striped" id="theTable">
+		<table class="table table-striped" id="theTable">
 			<thead>
 			<tr>
 				<th class="head">Function/Method:</th>
@@ -92,14 +92,14 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close stopvideo" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Additional Resources</h4>
       </div>
-      <div class="modal-body" id="modalbody">
+      <div class="modal-body text-center" id="modalbody">
 		<!-- Content Will Go Here -->
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default stopvideo" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
