--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- <script src="assets/javascript/sorttable.js"></script> -->
 
 	<!-- Original CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/app2.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- moment.js -->
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 	<!-- Google Fonts -->
@@ -68,7 +68,7 @@
 	<!-- function holder -->
 	<div class="col col-md-12 right" id="functiontable">
 
-		<table class="sortable table" id="theTable">
+		<table class="sortable table table-striped" id="theTable">
 			<thead>
 			<tr>
 				<th class="head">Function/Method:</th>
