--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<!-- sortable table -->
 	<!-- <script src="assets/javascript/sorttable.js"></script> -->
 
-	<!-- Original CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/app2.css">
+
 	<!-- moment.js -->
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 	<!-- Google Fonts -->
@@ -30,6 +29,9 @@
 	<!-- <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'> -->
 	<!-- New CSS -->
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/css.css"> -->
+
+	<!-- Original CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/css/app2.css">
 
 </head>
 
@@ -59,10 +61,11 @@
 	</div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col col-md-12 text-center" id="videoDiv"></div>
-</div>
+</div> -->
 
+<br><br><br>
 <div class="row">
 
 	<!-- function holder -->
@@ -71,6 +74,10 @@
 		<table class="sortable table" id="theTable">
 			<thead>
 			<tr>
+			<!-- zcode -->
+				<th class="head">Vote:</th>
+				<th class="head">Rating:</th>
+			<!-- zcode -->	
 				<th class="head">Function/Method:</th>
 				<th class="head">Language</th>
 				<th class="head">Description:</th>
